Fix radar position on mobile

--- a/style.css
+++ b/style.css
@@ -409,8 +409,10 @@ section {
     }
     
     .radar-container {
+        top: auto;
+        bottom: 50px;
         right: 50%;
-        transform: translate(50%, -50%);
+        transform: translate(50%, 0);
     }
 }
 
